--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="./js/flexible.js"></script>
+    <link rel="stylesheet" href="./swiper/css/swiper.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -17,8 +18,17 @@
             <p>宁夏景点门票</p>
             <span></span>
         </header>
-        <section></section>
+        <section id="werr">
+            <div>
+                <div id="banner"></div>
+                <div id="nav"></div>
+                <div id="con"></div>
+            </div>
+        </section>
     </div>
 </body>
+<script src="./swiper/js/swiper.min.js"></script>
+<script src="./js/better-scroll.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
