--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,119 @@
         </header>
         <section id="werr">
             <div>
-                <div id="banner"></div>
-                <div id="nav"></div>
-                <div id="con"></div>
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="./img/1.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="./img/2.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="./img/3.jpg" alt=""></div>
+                    </div>
+                </div>
+                <div id="nav">
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                    <dl>
+                        <dt></dt>
+                        <dd>自然风光</dd>
+                    </dl>
+                </div>
+                <div id="con">
+                    <ul class="con-nav">
+                        <li>全部城市</li>
+                        <li>综合排序</li>
+                        <li>预定时限</li>
+                    </ul>
+                    <div class="con-bao">
+                        <div class="ten">
+                            <img src="./img/a.png" alt="">
+                            <div>
+                                <div>镇北堡西部影城</div>
+                                <div>
+                                    <span>限时抢购</span>
+                                    <div><span>￥268</span> 起</div>
+                                </div>
+                                <div>
+                                    <span>4.3分</span>
+                                    <span>四星级</span>
+                                    <span>WiFi</span>
+                                    <span>P</span>
+                                </div>
+                                <div>
+                                    <div><span>首都机场</span><span>新国展</span></div>
+                                    <span>23.2公里</span>
+                                </div>
+                            </div>
+                            <span> > </span>
+                        </div>
+                        <div class="ten">
+                            <img src="./img/a.png" alt="">
+                            <div>
+                                <div>黄沙古都</div>
+                                <div>
+                                    <span>限时抢购</span>
+                                    <div><span>￥268</span> 起</div>
+                                </div>
+                                <div>
+                                    <span>4.3分</span>
+                                    <span>四星级</span>
+                                    <span>WiFi</span>
+                                    <span>P</span>
+                                </div>
+                                <div>
+                                    <div><span>首都机场</span><span>新国展</span></div>
+                                    <span>23.2公里</span>
+                                </div>
+                            </div>
+                            <span> > </span>
+                        </div>
+                        <div class="ten">
+                            <img src="./img/a.png" alt="">
+                            <div>
+                                <div>北京首都机场国际酒店</div>
+                                <div>
+                                    <span>限时抢购</span>
+                                    <div><span>￥268</span> 起</div>
+                                </div>
+                                <div>
+                                    <span>4.3分</span>
+                                    <span>四星级</span>
+                                    <span>WiFi</span>
+                                    <span>P</span>
+                                </div>
+                                <div>
+                                    <div><span>首都机场</span><span>新国展</span></div>
+                                    <span>23.2公里</span>
+                                </div>
+                            </div>
+                            <span> > </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
