--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="./js/flexible.js"></script>
-    <link rel="stylesheet" href="./swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -137,8 +137,8 @@
         </section>
     </div>
 </body>
-<script src="./swiper/js/swiper.min.js"></script>
-<script src="./js/better-scroll.js"></script>
-<script src="./js/index.js"></script>
+<script src="swiper/js/swiper.min.js"></script>
+<script src="js/better-scroll.js"></script>
+<script src="js/index.js"></script>
 
 </html>
