--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="box">
         <header>
-            <span><</span>
+            <span>返回</span>
             <p>宁夏景点门票</p>
             <span></span>
         </header>
